--- a/randomquotemachine/index.html
+++ b/randomquotemachine/index.html
@@ -48,22 +48,35 @@
             {
                 $.ajax(
                 {
-                    url: 'http://api.forismatic.com/api/1.0/?',
-                    dataType: 'jsonp',
-                    data: "method=getQuote&format=jsonp&lang=en&jsonp=?",
+                    // url: 'http://api.forismatic.com/api/1.0/?',
+                    // dataType: 'jsonp',
+                    // data: "method=getQuote&format=jsonp&lang=en&jsonp=?",
+                    //doesn't work in codepen, its blocked for some reason, but it works
+                    //on my desktop
+                    headers:
+                    {
+                      "X-Mashape-Key": "OivH71yd3tmshl9YKzFH7BTzBVRQp1RaKLajsnafgL2aPsfP9V",
+                      Accept: "application/json",
+                      "Content-Type": "application/x-www-form-urlencoded"
+                    },
+                    url: 'https://andruxnet-random-famous-quotes.p.mashape.com/cat=',
                     success: function (data)
                     {
-                         console.log(data);
+                        // console.log(data["quote"]);
+                        data = JSON.parse(data);
                         console.log(data);
-                        if (data.quoteAuthor)
+                        console.log(data);
+                        if (data.author)
                         {
-                            $("#quote_author").html(data.quoteAuthor);
+                            // $("#quote_author").html(data.quoteAuthor);
+                            $("#quote_author").html(data.author);
+
                         }
                         else
                         {
                             $("#quote_author").html("Unattributed");
                         }
-                        $("#quote > span").html(data.quoteText);
+                        $("#quote > span").html(data.quote);
                     },
                     error: function (xhr, status, error)
                     {
