--- a/front_end_libraries_projects/product_landing_page/index.html
+++ b/front_end_libraries_projects/product_landing_page/index.html
@@ -11,8 +11,23 @@
 
 <body>
 	<div class="container">
+		<header id="header">
+			<nav id="nav-bar"></nav>
+				<a class="nav-link"></a>
+				<a class="nav-link"></a>
+				<a class="nav-link"></a>
+			<h2>Guitar Header</h2>
+			<img id="header-img"></img>
+		</header>
 
-		
+
+		 <iframe width="420" height="315" src="https://www.youtube.com/embed/SbF9xJVOpo0"></iframe>
+
+
+		 <form id="form">
+			 <input id="email" placeholder="Email" type="email"></input>
+			 <input type="submit" id="submit"></input>
+		 </form>
 
 
 
