--- a/front_end_libraries_projects/product_landing_page/index.html
+++ b/front_end_libraries_projects/product_landing_page/index.html
@@ -1,38 +1,93 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<title>Product landing Page</title>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-	<div class="container">
+	<div class="container-fluid">
 		<header id="header">
-			<nav id="nav-bar"></nav>
-				<a class="nav-link"></a>
-				<a class="nav-link"></a>
-				<a class="nav-link"></a>
-			<h2>Guitar Header</h2>
-			<img id="header-img"></img>
+			<nav class="navbar navbar-expand-lg" id="nav-bar"></nav>
+				<img id="header-img"></img>
+				<a class="nav-link">Photos</a>
+				<a class="nav-link" href="#demo">Demo</a>
+				<a class="nav-link" href="#form">Email</a>
+			</nav>
 		</header>
+	</div>
 
 
-		 <iframe width="420" height="315" src="https://www.youtube.com/embed/SbF9xJVOpo0"></iframe>
+
+	
+	<div class="container">
+		<p></p>
+
+		<!-- CAROUSEL START -->
+
+		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+		  <ol class="carousel-indicators">
+		    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+		    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+		    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+		  </ol>
+		  <div class="carousel-inner">
+		    <div class="carousel-item active">
+		      <img src="./blue.jpg" class="d-block" alt="...">
+		      <div class="carousel-caption d-none d-md-block">
+		        <h5>The Blue version</h5>
+		        <p>One of the many colors</p>
+		      </div>
+		    </div>
+		    <div class="carousel-item">
+		      <img src="./headstock.jpg" class="d-block w-100" alt="...">
+		      <div class="carousel-caption d-none d-md-block">
+		        <h5>The headstock</h5>
+		      </div>
+		    </div>
+		    <div class="carousel-item">
+		      <img src="/back.jpg" class="d-block w-100" alt="...">
+		      <div class="carousel-caption d-none d-md-block">
+		        <h5>The back</h5>
+		      </div>
+		    </div>
+		  </div>
+		  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Previous</span>
+		  </a>
+		  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		    <span class="sr-only">Next</span>
+		  </a>
+		</div>
 
 
-		 <form id="form">
+
+
+		<!-- DEMO START -->
+		 <iframe id="demo" width="420" height="315" src="https://www.youtube.com/embed/SbF9xJVOpo0"></iframe>
+
+
+
+
+
+		 <h2 class="pizza">Pizza</h2>
+
+		 <!-- EMAIL START -->
+		 <form id="form" >
 			 <input id="email" placeholder="Email" type="email"></input>
 			 <input type="submit" id="submit"></input>
 		 </form>
 
+</div>
+<!-- container -->
 
 
 
-
-	</div>
 </body>
 </html>
