--- a/front_end_libraries_projects/product_landing_page/index.html
+++ b/front_end_libraries_projects/product_landing_page/index.html
@@ -14,7 +14,7 @@
 		<header id="header">
 			<nav class="navbar navbar-expand-lg" id="nav-bar"></nav>
 				<img id="header-img"></img>
-				<a class="nav-link">Photos</a>
+				<a class="nav-link">Intro</a>
 				<a class="nav-link" href="#demo">Demo</a>
 				<a class="nav-link" href="#form">Email</a>
 			</nav>
@@ -23,50 +23,55 @@
 
 
 
-	
+
 	<div class="container">
-		<p></p>
+		<div class="row">
+			<!-- CAROUSEL START -->
+			<div id="carouselExampleCaptions" class="col-md-6 carousel slide" data-ride="carousel">
+			  <ol class="carousel-indicators">
+			    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+			    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+			    <!-- <li data-target="#carouselExampleCaptions" data-slide-to="2"></li> -->
+			  </ol>
+			  <div class="carousel-inner">
+			    <div class="carousel-item active">
+			      <img src="./blue.jpg" class="d-block" alt="...">
+			      <div class="carousel-caption d-none d-md-block">
+			        <h5>The Blue version</h5>
+			        <p>One of the many colors</p>
+			      </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img src="./headstock.jpg" class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-none d-md-block">
+			        <h5>The headstock</h5>
+			      </div>
+			    </div>
+			    <!-- <div class="carousel-item">
+			      <img src="/back.jpg" class="d-block w-100" alt="...">
+			      <div class="carousel-caption d-none d-md-block">
+			        <h5>The back</h5>
+			      </div>
+			    </div> -->
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>
 
-		<!-- CAROUSEL START -->
+			<div class="col-md-6">
+				<h2> The Airline Guitar </h2>
+				<p>This guitar is pretty cool. It's got this and that.</p>
+			</div>
 
-		<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-		  <ol class="carousel-indicators">
-		    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-		    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-		    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-		  </ol>
-		  <div class="carousel-inner">
-		    <div class="carousel-item active">
-		      <img src="./blue.jpg" class="d-block" alt="...">
-		      <div class="carousel-caption d-none d-md-block">
-		        <h5>The Blue version</h5>
-		        <p>One of the many colors</p>
-		      </div>
-		    </div>
-		    <div class="carousel-item">
-		      <img src="./headstock.jpg" class="d-block w-100" alt="...">
-		      <div class="carousel-caption d-none d-md-block">
-		        <h5>The headstock</h5>
-		      </div>
-		    </div>
-		    <div class="carousel-item">
-		      <img src="/back.jpg" class="d-block w-100" alt="...">
-		      <div class="carousel-caption d-none d-md-block">
-		        <h5>The back</h5>
-		      </div>
-		    </div>
-		  </div>
-		  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Previous</span>
-		  </a>
-		  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Next</span>
-		  </a>
+
 		</div>
-
-
+		<!-- row end -->
 
 
 		<!-- DEMO START -->
@@ -76,7 +81,6 @@
 
 
 
-		 <h2 class="pizza">Pizza</h2>
 
 		 <!-- EMAIL START -->
 		 <form id="form" >
