Working on menu

--- a/front_end_libraries_projects/product_landing_page/index.html
+++ b/front_end_libraries_projects/product_landing_page/index.html
@@ -10,24 +10,29 @@
 </head>
 
 <body>
-	<div class="container-fluid">
+	<!-- <div class="container-fluid"> -->
 		<header id="header">
-			<nav class="navbar navbar-expand-lg" id="nav-bar"></nav>
-				<img id="header-img"></img>
-				<a class="nav-link">Intro</a>
+			<nav class="navbar navbar-expand-lg" id="nav-bar">
+				<img id="header-img" src="./nav.png"></img>
+				<a class="nav-link" href="#carouselExampleCaptions">Intro</a>
 				<a class="nav-link" href="#demo">Demo</a>
 				<a class="nav-link" href="#form">Email</a>
 			</nav>
 		</header>
-	</div>
+	<!-- </div> -->
+	<br>
+	<br>
+	<br>
+	<br>
 
+	<br>
 
 
 
 	<div class="container">
 		<div class="row">
 			<!-- CAROUSEL START -->
-			<div id="carouselExampleCaptions" class="col-md-6 carousel slide" data-ride="carousel">
+			<div id="carouselExampleCaptions" class="col-md-8 carousel slide" data-ride="carousel">
 			  <ol class="carousel-indicators">
 			    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
 			    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -64,7 +69,7 @@
 			  </a>
 			</div>
 
-			<div class="col-md-6">
+			<div class="col-md-4">
 				<h2> The Airline Guitar </h2>
 				<p>This guitar is pretty cool. It's got this and that.</p>
 			</div>
@@ -72,21 +77,25 @@
 
 		</div>
 		<!-- row end -->
-
+		<br><br><br>
+		<br><br><br>
 
 		<!-- DEMO START -->
 		 <iframe id="demo" width="420" height="315" src="https://www.youtube.com/embed/SbF9xJVOpo0"></iframe>
 
+		 <p>This guitar can fit many different styles of playing.</p>
+
+		 <br><br><br>
+		 <br><br><br>
 
 
-
-
-
+		 <h3>Sign up for our email newsletter for new guitar products!</h3>
 		 <!-- EMAIL START -->
 		 <form id="form" >
 			 <input id="email" placeholder="Email" type="email"></input>
 			 <input type="submit" id="submit"></input>
 		 </form>
+		 <br><br><br>
 
 </div>
 <!-- container -->
