Landing page project is pretty much done for now

--- a/front_end_libraries_projects/product_landing_page/index.html
+++ b/front_end_libraries_projects/product_landing_page/index.html
@@ -91,9 +91,9 @@
 
 		 <h3>Sign up for our email newsletter for new guitar products!</h3>
 		 <!-- EMAIL START -->
-		 <form id="form" >
+		 <form id="form" action="https://www.freecodecamp.com/email-submit" >
 			 <input id="email" placeholder="Email" type="email"></input>
-			 <input type="submit" id="submit"></input>
+			 <input type="submit" id="submit" required></input>
 		 </form>
 		 <br><br><br>
 
