--- a/front_end_libraries_projects/product_landing_page/index.html
+++ b/front_end_libraries_projects/product_landing_page/index.html
@@ -40,14 +40,14 @@
 			  </ol>
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
-			      <img src="./blue.jpg" class="d-block" alt="...">
+			      <img src="https://raw.githubusercontent.com/chocolatechimpcookie/freecodecamp_projects/master/front_end_libraries_projects/product_landing_page/Blue.jpg" class="d-block" alt="...">
 			      <div class="carousel-caption d-none d-md-block">
 			        <h5>The Blue version</h5>
 			        <p>One of the many colors</p>
 			      </div>
 			    </div>
 			    <div class="carousel-item">
-			      <img src="./headstock.jpg" class="d-block w-100" alt="...">
+			      <img src="https://raw.githubusercontent.com/chocolatechimpcookie/freecodecamp_projects/master/front_end_libraries_projects/product_landing_page/headstock.jpg" class="d-block w-100" alt="...">
 			      <div class="carousel-caption d-none d-md-block">
 			        <h5>The headstock</h5>
 			      </div>
