--- a/front_end_libraries_projects/product_landing_page/index.html
+++ b/front_end_libraries_projects/product_landing_page/index.html
@@ -13,7 +13,7 @@
 	<!-- <div class="container-fluid"> -->
 		<header id="header">
 			<nav class="navbar navbar-expand-lg" id="nav-bar">
-				<img id="header-img" src="./nav.png"></img>
+				<img id="header-img" src="https://github.com/chocolatechimpcookie/freecodecamp_projects/blob/master/front_end_libraries_projects/product_landing_page/nav.png?raw=true"></img>
 				<a class="nav-link" href="#carouselExampleCaptions">Intro</a>
 				<a class="nav-link" href="#demo">Demo</a>
 				<a class="nav-link" href="#form">Email</a>
