--- a/survey_form/index.html
+++ b/survey_form/index.html
@@ -16,8 +16,39 @@
 
     <div class="container">
       <h1 id="title">The Survey</h1>
+      <p id="description">Take a few minutes to finish this survey.</p>
+
+      <form id="survey">
+        <label for="name" id="name-label">Name</label>
+        <br>
+        <input id="name" placeholder="What is your name?"></input>
+        <br>
+
+        <label for="email" id="email-label">Email</label>
+        <br>
+        <input id="email" placeholder="What is your email address?"></input>
+        <br>
+
+        <label for="number" id="number-label" >Age</label>
+        <br>
+        <input id="number" placeholder="How old are you?"></input>
+        <br>
+        <label for="dropdown" id="dropdown-label:">How did you hear about us?</label>
+        <select id="dropdown" name="dropdown">
+          <option value="wom">Word of mouth</option>
+          <option value="tv">TV Advertisement / Marketing</option>
+          <option value="google">Google ad or search result</option>
+          <option value="email">Email</option>
+          <option value="other">Other</option>
+          <option value="facebook">Facebook</option>
+          <option value="instagram">Instagram</option>
+          <option value="linkedin">LinkedIn</option>
+        </select>
 
 
+
+
+      </form>
     </div>
 
 
