--- a/technical_page/index.html
+++ b/technical_page/index.html
@@ -18,11 +18,37 @@
 
   <main id="main-doc">
       <section class="main-section">
-        <h1>main section1</h1>
+        <h1>1: Introduction to Sass Syntax</h1>
+        <h3> SCSS</h3>
+        <p>The SCSS syntax uses the file extension .scss. With a few small exceptions, it’s a superset of CSS, which means essentially all valid CSS is valid SCSS as well. Because of its similarity to CSS, it’s the easiest syntax to get used to and the most popular.</p>
+        <h4>SCSS looks like this:</h4>
+        <pre>
+          <code>
+          @mixin button-base() {
+          @include typography(button);
+          @include ripple-surface;
+          @include ripple-radius-bounded;
+
+          display: inline-flex;
+          position: relative;
+          height: $button-height;
+          border: none;
+          vertical-align: middle;
+
+          &:hover { cursor: pointer; }
+
+          &:disabled {
+            color: $mdc-button-disabled-ink-color;
+            cursor: default;
+            pointer-events: none;
+          }
+        }
+        </code>
+      </pre>
       </section>
 
       <section class="main-section">
-        <h1>main section2</h1>
+        <h1>2: Structure of a Stylesheet</h1>
       </section>
 
       <section class="main-section">
@@ -34,7 +60,10 @@
       </section>
 
       <section class="main-section">
-        <h1>main section5</h1>
+        <h1>5: Bibliography</h1>
+        <p>The majority of this page is based on the official Sass documentation.</p>
+
+        <
       </section>
 
 
