Technical page is complete

--- a/technical_page/index.html
+++ b/technical_page/index.html
@@ -16,11 +16,11 @@
     <nav id="navbar">
     <!-- <nav id="navbar" class="nav flex-column col-xs-2"> -->
       <h5>Sass Documentation</h5>
-      <h6><a href="#introduction">Introduction</a><h6>
-      <h6><a href="#sass_statements">Statements</a></h6>
-      <h6><a href="#sass_expressions">Expressions</a>
-      <h6><a href="#sass_comments">Comments</a><h6>
-      <h6><a href="#bibliography">Bibliography</a><h6>
+      <h6><a href="#introduction" class="nav-link">Introduction</a><h6>
+      <h6><a href="#sass_statements" class="nav-link">Statements</a></h6>
+      <h6><a href="#sass_expressions" class="nav-link">Expressions</a>
+      <h6><a href="#sass_comments" class="nav-link">Comments</a><h6>
+      <h6><a href="#bibliography" class="nav-link">Bibliography</a><h6>
 
     </nav>
     <br>
